# CMake-Template

./: CMakeLists.txt
PointsLib/: CMakeLists.txt  PointLib.cpp  PointLib.h
list/: CMakeLists.txt  list.cpp  list.h
main/: main.cpp
stack/: CMakeLists.txt  stack.cpp  stack.h
test/: test_lib_name.cpp
